--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -19,6 +19,7 @@ reqwest = { version = "0.10.1", default-features = false, features = ["blocking"
 serde = "1.0.104"
 serde_derive = "1.0.103"
 serde_json = "1.0.46"
+solana-transaction-status = { path = "../transaction-status", version = "1.0.10" }
 solana-net-utils = { path = "../net-utils", version = "1.0.10" }
 solana-sdk = { path = "../sdk", version = "1.0.10" }
 solana-vote-program = { path = "../programs/vote", version = "1.0.10" }
