--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -29,6 +29,7 @@ regex = "1.3.4"
 serde = "1.0.104"
 serde_bytes = "0.11.3"
 solana-client = { path = "../client", version = "1.0.10" }
+solana-transaction-status = { path = "../transaction-status", version = "1.0.10" }
 solana-genesis-programs = { path = "../genesis-programs", version = "1.0.10" }
 solana-logger = { path = "../logger", version = "1.0.10" }
 solana-measure = { path = "../measure", version = "1.0.10" }
