Long-term ledger storage with BigTable (bp #11222)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ members = [
     "logger",
     "log-analyzer",
     "merkle-tree",
+    "storage-bigtable",
     "measure",
     "metrics",
     "net-shaper",
