--- a/ledger-tool/Cargo.toml
+++ b/ledger-tool/Cargo.toml
@@ -12,6 +12,7 @@ homepage = "https://solana.com/"
 bs58 = "0.3.0"
 clap = "2.33.0"
 histogram = "*"
+log = "0.4.8"
 serde_json = "1.0.46"
 serde_yaml = "0.8.11"
 solana-clap-utils = { path = "../clap-utils", version = "1.0.10" }
@@ -21,6 +22,7 @@ solana-runtime = { path = "../runtime", version = "1.0.10" }
 solana-sdk = { path = "../sdk", version = "1.0.10" }
 solana-vote-program = { path = "../programs/vote", version = "1.0.10" }
 solana-stake-program = { path = "../programs/stake", version = "1.0.10" }
+solana-transaction-status = { path = "../transaction-status", version = "1.0.10" }
 tempfile = "3.1.0"
 bytecount = "0.6.0"
 futures = "0.3.5"
