--- a/turbine/Cargo.toml
+++ b/turbine/Cargo.toml
@@ -14,6 +14,7 @@ bincode = { workspace = true }
 bytes = { workspace = true }
 crossbeam-channel = { workspace = true }
 futures = { workspace = true }
+histogram = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
 lru = { workspace = true }
